# openapi-example-python

./: README.md  cached_specs.json  gen_models.py  hello.py  main.py  pyproject.toml
models/: __init__.py  core.py
models/com/nokia/eda/: __init__.py
models/com/nokia/eda/aaa/: __init__.py  v1alpha1.py
models/com/nokia/eda/appstore/: __init__.py  v1.py
models/com/nokia/eda/bootstrap/: __init__.py  v1alpha1.py
models/com/nokia/eda/components/: __init__.py  v1alpha1.py
models/com/nokia/eda/config/: __init__.py  v1alpha1.py
models/com/nokia/eda/core/: __init__.py  v1.py
models/com/nokia/eda/fabrics/: __init__.py  v1alpha1.py
models/com/nokia/eda/filters/: __init__.py  v1alpha1.py
models/com/nokia/eda/interfaces/: __init__.py  v1alpha1.py
models/com/nokia/eda/oam/: __init__.py  v1alpha1.py
models/com/nokia/eda/protocols/: __init__.py  v1alpha1.py
models/com/nokia/eda/qos/: __init__.py  v1alpha1.py
models/com/nokia/eda/routing/: __init__.py  v1alpha1.py
models/com/nokia/eda/routingpolicies/: __init__.py  v1alpha1.py
models/com/nokia/eda/security/: __init__.py  v1alpha1.py
models/com/nokia/eda/services/: __init__.py  v1alpha1.py
models/com/nokia/eda/siteinfo/: __init__.py  v1alpha1.py
models/com/nokia/eda/system/: __init__.py  v1alpha1.py
models/com/nokia/eda/timing/: __init__.py  v1alpha1.py
models/com/nokia/eda/topologies/: __init__.py  v1alpha1.py
src/: auth.py  banner.py  client.py  interface.py  logging.py
