[project]
name = "openapi-example-python"
version = "0.1.0"
description = "Working with EDA OpenAPI specification"
readme = "README.md"
requires-python = "~=3.12"
dependencies = [
    "httpx==0.28.1",
    "pydantic==2.10.6",
    "pydantic-eda",
    "rich>=13.9.4",
]

[tool.uv.sources]
pydantic-eda = { git = "https://github.com/eda-labs/pydantic-eda" }
